# donetick-mcp-server

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
src/donetick_mcp/: __init__.py  client.py  config.py  server.py
tests/: test_integration.py  test_server.py
