[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "donetick-mcp"
version = "0.4.2"
description = "MCP server for Donetick chores management — 27 tools for chore CRUD, labels, subtasks, timers, and more"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Jason", email = "jason1365@users.noreply.github.com"}
]
keywords = ["mcp", "donetick", "chores", "api", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "mcp>=1.20.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "pytz>=2024.1",
    "uvicorn>=0.30.0",
    "starlette>=0.37.0",
]

[project.urls]
Homepage = "https://github.com/danielrosehill/donetick-mcp"
Documentation = "https://github.com/danielrosehill/donetick-mcp#readme"
Repository = "https://github.com/danielrosehill/donetick-mcp"
Issues = "https://github.com/danielrosehill/donetick-mcp/issues"
Changelog = "https://github.com/danielrosehill/donetick-mcp/releases"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "pytest-httpx>=0.30.0",
]

[project.scripts]
donetick-mcp = "donetick_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"
markers = [
    "live_api: tests that interact with a real Donetick instance (run with: pytest -m live_api)",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]  # Line too long (handled by formatter)
